# depagon

./: .gitignore  README.md  pyproject.toml  report.html
src/depagon/: __init__.py  analyzer.py  cli.py  graph.py  renderers.py  scanner.py
src/depgraph/: __init__.py  analyzer.py  cli.py  renderers.py
tests/: test_analyzer.py  test_graph.py  test_scanner.py
