[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depgraph"
version = "0.1.0"
description = "Analyze the import dependency structure of a Python project."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Agon" }]
requires-python = ">=3.10"
dependencies = ["rich"]

[project.scripts]
depgraph = "depgraph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/depgraph"]
