[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depagon"
version = "0.1.1"
description = "Analyze the import dependency structure of a Python project."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Agon" }]
requires-python = ">=3.9"
dependencies = ["rich"]

[project.scripts]
depagon = "depagon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/depagon"]
